chore: boring refactoring