@@ -11,7 +11,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -92,7 +91,7 @@ public class LazyGlossaryTableView extends LazyDataModel<GlossaryTableView> {
 
         List<GlossaryEntry> data = glossaryResource.getEntries().stream()
             .filter(allPredicates.stream().reduce(x -> true, Predicate::and))
-            .collect(Collectors.toList());
+            .toList();
 
         if (filterBy.get("globalFilter") != null) {
             highlightText(data, filterBy.get("globalFilter").getFilterValue().toString());
