@@ -25,7 +25,6 @@ public final class UserView implements Serializable {
 
     @Serial
     private static final long serialVersionUID = 5664039620488069850L;
-    //private static final Logger log = LogManager.getLogger(UserView.class);
 
     private final User user;
 
@@ -120,7 +119,7 @@ public final class UserView implements Serializable {
     public static List<UserView> of(List<User> users, Function<UserView, ?>... preloadFields) {
         Objects.requireNonNull(users);
 
-        List<UserView> userViews = users.stream().map(UserView::of).collect(Collectors.toList());
+        List<UserView> userViews = users.stream().map(UserView::of).toList();
 
         if (preloadFields.length > 0 && !users.isEmpty()) { // preload specified fields
             ExecutorService executor = Executors.newSingleThreadExecutor();
